# division-result-bridge

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Secrets.hpp.in  main.cpp  package-lock.json  package.json  svelte.config.js  vite.config.ts
.github/workflows/: deploy.yml
lib/verdigris/: wobjectimpl.h
locales/: da.json  en.json
releases/: make_release.bat
resources/: resources.qrc
resources/icon/: icon.rc  icon.xcf
src/: AboutDialog.cpp  AboutDialog.hpp  CMakeLists.txt  Competition.cpp  Competition.hpp  CompetitionCreatedDialog.cpp  CompetitionCreatedDialog.hpp  ConfigValidator.cpp  ConfigValidator.hpp  Coordinator.cpp  Coordinator.hpp  CreateCompetitionDialog.cpp  CreateCompetitionDialog.hpp  Division.cpp  Division.hpp  DivisionEditor.cpp  DivisionEditor.hpp  DivisionTableModel.cpp  DivisionTableModel.hpp  EditorMode.hpp  ForwardDeclarations.hpp  Helpers.cpp  Helpers.hpp  Loggable.cpp  Loggable.hpp  Logger.cpp  Logger.hpp  LoggerProxy.cpp  LoggerProxy.hpp  MainWindow.cpp  MainWindow.hpp  MeosInterface.cpp  MeosInterface.hpp  MessageType.hpp  PersistentSettings.cpp  PersistentSettings.hpp  PrintMode.hpp  ResultPackage.cpp  ResultPackage.hpp  ResultSource.hpp  (+13 more)
src/comp-create-wizard/: AlteredWizardPage.cpp  AlteredWizardPage.hpp  CMakeLists.txt  CompatibilityWizardPage.cpp  CompatibilityWizardPage.hpp  CompetitionCreationWizard.cpp  CompetitionCreationWizard.hpp  ResponseWizardPage.cpp  ResponseWizardPage.hpp  SummaryTableModel.cpp  SummaryTableModel.hpp
src/configure-files/: LICENSE  Secrets.hpp.in
src/lib/: DocImage.svelte  Footer.svelte  Image.svelte  LanguageSelect.svelte  LatestRelease.svelte  NavBar.svelte  NavDropdown.svelte  NavHomeLink.svelte  NavLink.svelte  Navbar.svelte  Release.svelte  ThemeSwitch.svelte  htmlFromMarkdown.ts  locale-names.ts  localeHandler.ts  releaseMeta.ts  resources.ts  stores.ts  types.ts
src/lib/docs/: DocElement.svelte  DocFooter.svelte  DocHeader.svelte  DocHighlightedTextbox.svelte  DocImage.svelte  DocNav.svelte  DocPage.svelte  DocPageNav.svelte  DocPageNavList.svelte  docs.ts
src/lib/docs/getting-started/: CompetitionDetails.svelte  Configuration.svelte  CreateCompetition.svelte  Installation.svelte  Prerequisites.svelte  PublishResults.svelte
src/lib/docs/preface/: Introduction.svelte
src/lib/icons/: Logo.svelte  OptionsIcon.svelte  ThemeIcon.svelte  TranslateIcon.svelte
src/logging/: CMakeLists.txt  Loggable.cpp  Loggable.hpp  Logger.cpp  Logger.hpp  LoggerMode.hpp  LoggerProxy.cpp  LoggerProxy.hpp  LoggerRegistry.cpp  LoggerRegistry.hpp  LoggingConcepts.hpp  MessageType.hpp
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/about/: +page.svelte
src/routes/docs/: +layout.svelte  +layout.ts  +page.svelte
src/routes/docs/[[collection]]/[[page]]/: +page.svelte  +page.ts
src/routes/download/: +page.svelte  +page.ts
src/routes/license/: +page.svelte  +page.ts
src/routes/privacy/: +page.svelte
src/styles/: _helpers.scss  _resets.scss  base.scss  doc-footer.scss  doc-header.scss  doc-highlighted-textbox.scss  doc-nav.scss  doc-page-nav-list.scss  doc-page-nav.scss  docs.scss  download.scss  fonts.scss  footer.scss  hljs.scss  home.scss  image.scss  label-with-icon.scss  latest-release.scss  license.scss  nav-bar.scss  nav-dropdown.scss  nav-home-link.scss  navbar.scss  release.scss  resets.scss  svg-icon.scss  themes.scss
src/utils/: BasicConcepts.hpp  CMakeLists.txt  ForwardDeclarations.hpp  Helpers.cpp  Helpers.hpp  SignalDebouncer.hpp
src/version/: CMakeLists.txt  UpdateDialog.hpp  UpdateStatus.hpp  Version.cpp  Version.hpp  VersionComparison.hpp  VersionNotifier.cpp  VersionNotifier.hpp
src/workers/: CMakeLists.txt  Coordinator.cpp  Coordinator.hpp  DivisionInterface.cpp  DivisionInterface.hpp  MeosInterface.cpp  MeosInterface.hpp  ResultPackage.hpp  WebserverInterface.cpp  WebserverInterface.hpp
